Crash when duplicate f-curve keyframe, individual origins. #39795

Closed
opened 2014-04-19 20:58:48 +02:00 by koil · 10 comments

System Information
Windows 7 32 bit.

Blender Version
Broken: Blender win 32 bit, 2.70a, Hash: f93bc76.

Short description of error
Crash when duplicate f-curve keyframe, with pivot point set to individual origins.

Exact steps for others to reproduce the error

  • Add some keyframes to cube property.
  • Go to Graph Editor, via Header, set Pivot Point to Individual Origins.
  • Curve_Rotatoe.blend
  • Select a Keyframe then Duplicate Shift+D, blender crashed.

The crash happens with linear, constant, and bezier interpolation.

Side note, this rotation mode doesnt seem to be useful for constant or linear interpolation.

**System Information** Windows 7 32 bit. **Blender Version** Broken: Blender win 32 bit, 2.70a, Hash: f93bc76. **Short description of error** Crash when duplicate f-curve keyframe, with pivot point set to individual origins. **Exact steps for others to reproduce the error** * Add some keyframes to cube property. * Go to Graph Editor, via Header, set Pivot Point to Individual Origins. * [Curve_Rotatoe.blend](https://archive.blender.org/developer/F85309/Curve_Rotatoe.blend) * Select a Keyframe then Duplicate Shift+D, blender crashed. The crash happens with linear, constant, and bezier interpolation. Side note, this rotation mode doesnt seem to be useful for constant or linear interpolation.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @koilz

Added subscriber: @koilz

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Crasn confirmed on Windows 7 x64.

Crasn confirmed on Windows 7 x64.
Sergey Sharybin self-assigned this 2014-04-28 10:16:57 +02:00
Sergey Sharybin removed their assignment 2014-04-30 13:21:41 +02:00
Campbell Barton was assigned by Sergey Sharybin 2014-04-30 13:21:41 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Have a potential fix, but extra eyes are needed: http://www.pasteall.org/51238/diff

Have a potential fix, but extra eyes are needed: http://www.pasteall.org/51238/diff

This issue was referenced by blender/blender-addons-contrib@db32e6c4f7

This issue was referenced by blender/blender-addons-contrib@db32e6c4f77f7168b2261ac7d2070414e8153f95

This issue was referenced by db32e6c4f7

This issue was referenced by db32e6c4f77f7168b2261ac7d2070414e8153f95

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit db32e6c4f7.

Closed by commit db32e6c4f7.
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#39795
No description provided.