Fix T39795: Crash when duplicate f-curve keyframe, individual origins

Seems to be just missing case for center point initialization in td.

Thanks Campbell for review!