source/blender/editors/transform/transform.c
@@ -7683,7 +7683,8 @@ static void applyTimeScale(TransInfo *t, const int UNUSED(mval[2]))
 /* TODO, move to: transform_queries.c */
 bool checkUseLocalCenter_GraphEdit(TransInfo *t)
 {
-	return ((t->around == V3D_LOCAL) && !ELEM3(t->mode, TFM_TRANSLATION, TFM_TIME_TRANSLATE, TFM_TIME_SLIDE));
+	return ((t->around == V3D_LOCAL) &&
+	        !ELEM4(t->mode, TFM_TRANSLATION, TFM_TIME_TRANSLATE, TFM_TIME_SLIDE, TFM_TIME_DUPLICATE));
 }
 
 bool checkUseAxisMatrix(TransInfo *t)
